# scidb-string

./: CMakeLists.txt  README.md
cmake/: FindScidb.cmake
src/: CMakeLists.txt  Makefile  string.cpp
